quic/s2n-quic-core/src/inet/snapshots/s2n_quic_core__inet__ethernet__tests__snapshot_filled_test.snap
---
source: quic/s2n-quic-core/src/inet/ethernet.rs
expression: header
---
ethernet::Header {
    destination: MacAddress(
        ff:ff:ff:ff:ff:ff,
    ),
    source: MacAddress(
        ff:ff:ff:ff:ff:ff,
    ),
    ethertype: EtherType(
        [unknown 0xffff],
    ),
}
